--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -39,6 +39,7 @@
         <li><p>3. Check the result in the terminal</p></li>
     </ul>
     <p>Alternately you can test the function by clickling the button below (Enter the text you want to hash)</p>
+    <p>After clicking the button, you can inspect the request and response in the browser network monitor</p>
     <input id="second-input">
     <button onclick="hashBtnFunc()" type="button">Hash</button>
     <p>Result:</p>
